--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       dockerfile: .docker/php/Dockerfile
     container_name: php_worker
     restart: unless-stopped
-    command: php /var/www/app/artisan queue:work --tries=3
+    command: php /var/www/app/artisan queue:work --tries=3 --timeout=90
     volumes:
       - .:/var/www/app:delegated
     depends_on:
